<resources>
    <string name="app_name">Music Masti</string>
    <string name="playlists">Playlists</string>
    <string name="music_library">Music Library</string>
    <string name="all_songs">All Songs</string>
    <string name="artists">Artists</string>
    <string name="queue">Queue</string>
    <string name="albums">Albums</string>
    <string name="geners">Geners</string>
    <string name="recents">Recently Played</string>
    <string name="permission_dialog_title">Grant Permission</string>
    <string name="permission_dialog_message">Please allow application to read phone memory to play media</string>
    <string name="permission_denied_error_message">Application cannot proceed without read permission</string>
    <string name="permission_granted_thank_message">Thanks for granting permission</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="songs">Songs:</string>
    <string name="lyrics">Lyrics</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="view_mode">View Mode</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="list_count">List Count</string>
    <string name="grid_count">Grid Count</string>
    <string name="transition_thumbnai">ThumbnailTransition</string>
    <string name="transition_thumbnai_two">ThumbnailTransitionTwo</string>
    <string name="duration">Duration:&#160;</string>
    <string name="playing_now">PLAYING NOW</string>
    <string name="enqueue">Enqueue</string>
    <string name="close">Close</string>
    <string name="set_ringtone">Set as Ringtone</string>
    <string name="share">Share</string>
    <string name="information">Information</string>
    <string name="delete">Delete</string>
    <string name="title">Title:&#160;</string>
    <string name="album">Album:&#160;</string>
    <string name="artist">Artist:&#160;</string>
    <string name="composer">Composer:&#160;</string>
    <string name="size">Size:&#160;</string>
    <string name="path">Path:&#160;</string>
    <string name="details">Details</string>
    <string name="ok">OK</string>
    <string name="add_to_playlist">Add To PlayList</string>
    <string name="no_songs_found">No Songs Found</string>
    <bool name="isTablet">false</bool>
    <string name="search">Search</string>
    <string name="equalizer">Equalizer</string>
    <string name="about">About</string>
    <string name="feedback">Feedback and Suggestions</string>
    <string name="equalizer_not_supported">Equalizer not supported.</string>
    <string name="share_app">Share this App</string>
    <string name="share_app_message">Share</string>
    <string name="pager">Pager</string>
    <string name="change_song_shake">Change song by shaking</string>
    <string name="change_song_shake_sub">Shake to the next song</string>
    <string name="device_accelorometer_absent">Shake to change song feature is not supported as your mobile doesn\'t have Acceleromoter.</string>
    <string name="headset_control">Headset control allowed</string>
    <string name="headset_control_message">Open will be able to: \nClick: Play/Pause; Double: Next song; Third: Previous</string>
    <string name="sort">Sort</string>
    <string name="none">None</string>
    <string name="title_one">Title</string>
    <string name="date">Date</string>
    <string name="tracks">Tracks:&#160;</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="create_new_playlist">Add new Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="enter_playlist_name">Enter Playlist name</string>
    <string name="select_play_list_error_message">Please select playlist or create new playlist</string>
    <string name="create_play_list_error_message_one">Please enter playlist name</string>
    <string name="create_play_list_error_message_two">Entered playlist already exists</string>
    <string name="alert">Alert</string>
    <string name="play_list_delete_warn_message">Are you sure of deleting %s from playlist?</string>
    <string name="play_list_empty_message">Empty PlayList</string>
</resources>
