<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/equalizer"
            android:title="@string/equalizer"
            android:icon="@drawable/icon_equalizer"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings_black"/>

        <item
            android:id="@+id/share_app"
            android:title="@string/share_app"
            android:icon="@drawable/icon_share_black"/>
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/icon_info_black"/>
        <item
            android:id="@+id/feedback"
            android:title="@string/feedback"
            android:icon="@drawable/icon_feedback"/>
    </group>
</menu>