<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/icon_search"
        android1:showAsAction="ifRoom"
        />
    <item android:id="@+id/sort"
        android:title="@string/sort"
        android:icon="@drawable/icon_sort"
        android1:showAsAction="ifRoom"
        />
    <item android:id="@+id/view_type"
        android:title="@string/grid_view"
        android1:showAsAction="ifRoom"
        />
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/icon_settings"
        android1:showAsAction="ifRoom"
        />
    <item android:id="@+id/share_app"
        android:title="@string/share_app"
        android:icon="@drawable/icon_share"
        android1:showAsAction="ifRoom"
        />
</menu>
