<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_min_width"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        style="@style/TextViewLarge"
        android:layout_gravity="center_horizontal"
        android:text="@string/sort" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/title"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/title_one" />

        <RadioButton
            android:id="@+id/artists"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/artists" />

        <RadioButton
            android:id="@+id/recently_played"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/recents" />

        <RadioButton
            android:id="@+id/date"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/date" />

        <RadioButton
            android:id="@+id/none"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/none" />
    </RadioGroup>

    <include layout="@layout/support_bottom_layout"/>

</LinearLayout>