<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_background">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                style="@style/TextViewLarge"
                android:layout_width="match_parent"
                android:text="@string/view_mode"
                android:layout_marginTop="5dp"/>

            <RadioGroup
                android:id="@+id/view_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <RadioButton
                    android:id="@+id/grid_view"
                    android:layout_width="match_parent"
                    style="@style/TextViewMedium"
                    android:layoutDirection="rtl"
                    android:gravity="left|center_vertical"
                    android:text="@string/grid_view"/>
                <RadioButton
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    style="@style/TextViewMedium"
                    android:layoutDirection="rtl"
                    android:gravity="left|center_vertical"
                    android:text="@string/list_view"/>

            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/grid_count_text"
                    style="@style/TextViewMedium"
                    android:layout_marginTop="15dp"
                    android:text="@string/grid_count"/>
                <Spinner
                    android:id="@+id/grid_count_spinner"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_alignBaseline="@+id/grid_count_text"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/list_count_text"
                    style="@style/TextViewMedium"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/grid_count_text"
                    android:text="@string/list_count"/>
                <Spinner
                    android:id="@+id/list_count_spinner"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignBaseline="@+id/list_count_text"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                style="@style/TextViewLarge"
                android:layout_width="match_parent"
                android:text="@string/pager"
                android:layout_marginTop="10dp"/>

            <Switch
                android:id="@+id/albums"
                android:layout_width="match_parent"
                style="@style/TextViewMedium"
                android:layout_marginTop="5dp"
                android:gravity="left|center_vertical"
                android:text="@string/albums"/>
            <Switch
                android:id="@+id/all_songs"
                android:layout_width="match_parent"
                style="@style/TextViewMedium"
                android:gravity="left|center_vertical"
                android:text="@string/all_songs"/>
            <Switch
                android:id="@+id/composers"
                android:layout_width="match_parent"
                style="@style/TextViewMedium"
                android:gravity="left|center_vertical"
                android:text="@string/artists"/>
            <Switch
                android:id="@+id/playlists"
                android:layout_width="match_parent"
                style="@style/TextViewMedium"
                android:gravity="left|center_vertical"
                android:text="@string/playlists"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
            <CheckBox
                android:id="@+id/shake_skip"
                android:layout_width="match_parent"
                android:layoutDirection="rtl"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                style="@style/TextViewLarge"
                android:text="@string/change_song_shake"/>
            <TextView
                style="@style/TextViewSmall"
                android:layout_width="match_parent"
                android:text="@string/change_song_shake_sub"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
            <CheckBox
                android:id="@+id/headset_control"
                android:layout_width="match_parent"
                android:layoutDirection="rtl"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                style="@style/TextViewLarge"
                android:text="@string/headset_control"/>
            <TextView
                style="@style/TextViewSmall"
                android:layout_width="match_parent"
                android:text="@string/headset_control_message"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:textColor="@android:color/white"
            android:text="@string/save"/>

    </LinearLayout>
</RelativeLayout>