<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@android:color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/enque_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_list"
            android:orientation="vertical">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_queue"/>
            <TextView
                style="@style/TextViewSmall"
                android:gravity="center_horizontal"
                android:text="@string/enqueue"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/set_as_ringtone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_list"
            android:orientation="vertical">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/icon_ringtone"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/TextViewSmall"
                android:gravity="center_horizontal"
                android:text="@string/set_ringtone"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_list"
            android:orientation="vertical">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/icon_share"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/TextViewSmall"
                android:gravity="center_horizontal"
                android:text="@string/share"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_list"
            android:orientation="vertical">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_info"/>
            <TextView
                style="@style/TextViewSmall"
                android:gravity="center_horizontal"
                android:text="@string/information"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:id="@+id/delete_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_list"
            android:orientation="vertical">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_delete"/>
            <TextView
                style="@style/TextViewMedium"
                android:text="@string/delete"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/add_to_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_list"
            android:orientation="vertical">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_play_list"/>
            <TextView
                style="@style/TextViewMedium"
                android:text="@string/add_to_playlist"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/close"
        style="@style/TextViewLarge"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/ripple_effect_list"
        android:text="@string/close"/>

</LinearLayout>